<resources>
    <string name="app_name">Secret</string>
    <string name="sign_in_button" translatable="false">Sign In</string>

    <string name="linktosite"><a href="http://vula.co.za">Vula</a></string>

    <string name="logout_button">Log out</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="storing_name">name</string>
    <string name="search_password">Search Password</string>
</resources>

